# job-hunter-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  search_results.txt  test_config.txt
.github/workflows/: ci.yml  keep-alive.yml
alembic/: env.py
alembic/versions/: 20251211_1801_e35207fe4427_initial_schema.py  20251217_add_auth_tables.py  20251217_add_user_id_to_applications.py  20251227_add_granted_scopes.py  20251228_add_linkedin_enum.py  20251228_add_linkedin_uppercase.py  20251228_fix_authprovider_enum.py  20260109_add_job_extraction_fields.py
browser-service/: Dockerfile  leapcell.yaml  main.py  prepare_playwright_env.sh  render.yaml
docs/: AGENTS_STATUS.md  API_INTEGRATION.md  AUTOMATION_GUIDE.md  BLOCKERS_LOG.md  DEPLOYMENT_GUIDE.md  GUIA_TESTING_COMPLETA.md  IMPLEMENTATION_PLAN_PHASE5.md  IMPLEMENTATION_STATUS.md  TECH_STACK.md
docs/origin/: AvuaComparison.md  JOB_HUNTING_AUTOMATION.md  PRD.md
scripts/: claude_code_fallback.py  list_gemini_models.py  run_application_pipeline.py  test_captcha_solver.py  test_form_automation.py  test_gemini3.py  test_gemini_mcp.py  test_mcp_chrome.py  test_orchestrator.py  test_real_e2e.py  test_v2_api.py
src/: config.py  main.py
src/agents/: __init__.py  base.py  cv_adapter.py  email_parser.py  form_filler.py  gemini_orchestrator.py  question_answerer.py  skill_enhancer.py
src/api/: dependencies.py  rate_limiter.py  schemas.py  startup.py  websocket_manager.py
src/api/routes/: applications.py  auth.py  emails.py  gmail.py  jobs.py  linkedin.py  users.py
src/auth/: __init__.py  jwt.py  password.py
src/auth/providers/: __init__.py  base.py  github.py  google.py  linkedin.py
src/automation/: __init__.py  application_pipeline.py  client.py  intervention_manager.py  models.py  pause_manager.py  session_store.py
src/automation/blockers/: __init__.py  detector.py  handler.py
src/automation/strategies/: __init__.py  base.py  breezy.py  generic.py  registry.py
src/browser_service/: __init__.py  main.py  models.py  session_manager.py
src/browser_service/adapters/: __init__.py  base.py  chrome_devtools.py  playwright_adapter.py
src/cli/: commands.py
src/db/: models.py  session.py
src/db/repositories/: __init__.py  application.py  base.py  job.py  material.py  user.py
src/integrations/captcha/: __init__.py  solver.py
src/integrations/claude/: client.py
src/integrations/email/: __init__.py  gmail.py  parser.py
src/integrations/jobs/: __init__.py  scraper.py
src/integrations/langfuse/: tracing.py
src/integrations/linkedin/: __init__.py  client.py
src/mcp/: __init__.py  chrome_client.py
src/scraper/: __init__.py  ai_extractor.py  content_cleaner.py  job_scraper.py
src/services/: __init__.py  document_generator.py  email_pipeline.py
tests/: conftest.py
tests/integration/: test_fullautoapply.py  test_ws.py
tests/unit/: test_agents.py  test_config.py  test_email_parser.py  test_linkedin.py  test_models.py  test_pipeline.py
