[tool.poetry]
name = "job-hunter-api"
version = "0.1.0"
description = "AI-powered job hunting automation - Email to application pipeline with CV adaptation"
authors = ["Javier Aguilar Martin <javiecija96@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
langfuse = "^2.54.0"
langgraph = "^0.2.0"
mcp = "^1.0.0"
typer = {extras = ["all"], version = "^0.14.0"}
google-api-python-client = "^2.150.0"
google-auth-oauthlib = "^1.2.0"
O365 = "^2.0.35"
httpx = "^0.28.0"
python-multipart = "^0.0.12"
cryptography = "^43.0.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
python-docx = "^1.1.0"
pypdf = "^5.1.0"
google-auth-httplib2 = "^0.2.1"
boto3 = "^1.42.8"
beautifulsoup4 = "^4.14.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
job-hunter = "src.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
