[tool.poetry]
name = "job-hunter-api"
version = "0.1.0"
description = "AI-powered job hunting automation - Email to application pipeline with CV adaptation"
authors = ["Javier Aguilar Martin <javiecija96@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
langfuse = "^2.54.0"
langgraph = "^0.2.0"
mcp = "^1.0.0"
typer = "0.12.5"
google-api-python-client = "^2.150.0"
google-auth-oauthlib = "^1.2.0"
O365 = "^2.0.35"
httpx = "^0.28.0"
python-multipart = "^0.0.12"
cryptography = "^43.0.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
python-docx = "^1.1.0"
pypdf = "^5.1.0"
google-auth-httplib2 = "^0.2.1"
boto3 = "^1.42.8"
beautifulsoup4 = "^4.14.3"

# Browser Automation (Phase 2)
playwright = "^1.49.0"
websockets = "^14.0"
click = "8.1.7"
fpdf2 = "^2.8.5"
google-genai = "^1.56.0"
twocaptcha-python = "^0.0.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.3.0"
html2text = "^2025.4.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-playwright = "^0.6.2"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
job-hunter = "src.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long
    "B008",   # Function call in default arg (common FastAPI pattern)
    "B904",   # Raise without from (nice to have)
    "SIM102", # Collapsible if
    "SIM103", # Return bool directly
    "SIM105", # Suppressible exception
    "SIM108", # Ternary instead of if-else
    "SIM110", # Reimplemented builtin
    "SIM117", # Multiple with statements
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]  # sys.path modification requires imports after code
"alembic/versions/*" = ["ALL"]  # Auto-generated migration files
"scripts/*" = ["E402", "F401", "F841", "SIM"]  # Dev scripts: relaxed rules
"src/main.py" = ["E402"]  # FastAPI app structure requires scattered imports

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Relaxed type checking - can enable stricter rules gradually
check_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
# Ignore common issues in this codebase
disable_error_code = ["union-attr", "arg-type", "assignment", "return-value", "attr-defined", "var-annotated", "type-arg", "misc", "override", "call-overload", "dict-item", "call-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
